syntax = "proto3";

import "google/protobuf/timestamp.proto";

package relay;
option go_package = "github.com/modelgate/modelgate/pkg/proto/model/relay";


message Ledger {
  int64 id = 1;
  int64 account_id = 2;
  string account_name = 3;
  string model_code = 4;
  string type = 5;
  int64 amount = 6;
  int64 balance_after = 7;
  int64 request_id = 8;
  string reason = 9;
  google.protobuf.Timestamp created_at = 10;
}